# imgfind

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  tests.yml
imgfind/find/: main.py  options.py
imgfind/lib/: exif.py  ffmpeg.py  graphicsmagick.py  imagemagick.py  libvips.py  pillow.py
imgfind/teeny/: main.py
scripts/: completion_bash.py  completion_fish.py  completion_zsh.py
tests/: test_find.py  test_lib_graphicsmagick.py  test_lib_imagemagick.py  test_lib_pillow.py  test_teeny.py
