[metadata]
name = imgfind
version = 0.1.2
project_urls =
    Source = https://github.com/Alanaktion/imgfind
description = Find images in a directory, similar to findutils

[options]
packages = imgfind
install_requires =
    Pillow
    argparse; python_version < "3.2"
    pathinfo; python_version < "3.4
    importlib-metadata; python_version < "3.8"
python_requires = >=3.4

[options.entry_points]
console_scripts =
    ifind = imgfind.ifind:main
