[metadata]
name = imgfind
version = 0.3.1
description = Find and modify images in a directory, similar to findutils

[project.urls]
Source = https://github.com/Alanaktion/imgfind

[options]
packages =
    imgfind
    imgfind.find
    imgfind.lib
    imgfind.teeny
    imgfind.vfind
install_requires =
    Pillow
    piexif
python_requires = >=3.5

[options.entry_points]
console_scripts =
    ifind = imgfind.find:main
    vfind = imgfind.vfind:main
    teeny = imgfind.teeny:main
    vteeny = imgfind.vteeny:main
